syntax = "proto3";

package starknet.class;

import "proto/common.proto";

message EntryPoint {
    starknet.common.Felt252 selector = 1;
    uint64 offset = 2;
}

message Cairo0Class {
    string abi = 1;
    repeated EntryPoint externals = 2;
    repeated EntryPoint l1_handlers = 3;
    repeated EntryPoint constructors = 4;
    // Compressed in base64 representation.
    string program = 5;
}

message SierraEntryPoint {
    uint64 index = 1;
    starknet.common.Felt252 selector = 2;
}

message Cairo1EntryPoints {
    repeated SierraEntryPoint externals = 1;
    repeated SierraEntryPoint l1_handlers = 2;
    repeated SierraEntryPoint constructors = 3;
}

message Cairo1Class {
    string abi = 1;
    Cairo1EntryPoints entry_points = 2;
    repeated starknet.common.Felt252 program = 3;
    string contract_class_version = 4;
}

message Class {
    oneof class {
        Cairo0Class cairo0 = 1;
        Cairo1Class cairo1 = 2;
    }
    uint32 domain = 3;
    starknet.common.Hash class_hash = 4;
}